feat: added information
Added 5 slide & image

--- a/src/slides/sub-slides/subSlide-1-for-s4.pug
+++ b/src/slides/sub-slides/subSlide-1-for-s4.pug
@@ -1,3 +1,3 @@
-div(class='block-column').fragment.fade-in
-  image(class='logo-2' src='images/school.jpg')
-  h4 September 2020
+span.fragment.fade-in
+  h4 <span class='red-letter'>Create</span> & save new event
+  span &#9660;
