--- a/src/slides/sub-slides/subSlide-2-for-s4.pug
+++ b/src/slides/sub-slides/subSlide-2-for-s4.pug
@@ -1,2 +1,3 @@
-div(class='block-row').fragment.fade-in
-  image(class='logo-rs' src='images/logo-rs.png')
+span.fragment.fade-in
+  h4 Event takes new ID(UUID) & save in data base.
+  span &#9660;
