--- a/src/slides/sub-slides/subSlide-3-for-s4.pug
+++ b/src/slides/sub-slides/subSlide-3-for-s4.pug
@@ -1,3 +1,3 @@
-div(class='block-column').fragment.fade-in
-  image(class='logo-2' src='images/hard-team.jpeg')
-  h4 Now
+span.fragment.fade-in
+  h4 Return updated calendar with new event
+  span &#9660;
