--- a/src/slides/slide-4.pug
+++ b/src/slides/slide-4.pug
@@ -1,8 +1,6 @@
 section(data-background-image="images/developer-tired.jpg")
-  h2 About our team
-  <div class='big-block'>
-    include sub-slides/subSlide-1-for-s4.pug
-    include sub-slides/subSlide-2-for-s4.pug
-    include sub-slides/subSlide-3-for-s4.pug
-section(data-background-image="images/developer-tired.jpg")
-  h1 Thank you!
+  h3 Work with events in calendar
+  include sub-slides/subSlide-1-for-s4.pug
+  include sub-slides/subSlide-2-for-s4.pug
+  include sub-slides/subSlide-3-for-s4.pug
+  include sub-slides/subSlide-4-for-s4.pug
