refactor: update layout
Update slide 3

--- a/src/slides/slide-3.pug
+++ b/src/slides/slide-3.pug
@@ -1,6 +1,9 @@
 section(data-background-image="images/developer-tired.jpg")
   h3 Kanban board
-  section(class='section-structure')
-    include sub-slides/subSlide-1-for-s3.pug
-  section(class='section-structure')
-    include sub-slides/subSlide-2-for-s3.pug
+  section(class='section-example' style='text-align: center')
+    h4 To develop the application, we used Jira
+    image(class='jira-image' src='images/jira.jpg')
+  section(class='section-install')
+    h4 We create and solve tasks
+    image(class='jira-image' src='images/jira-tasks.jpg')
+</section>
