feat: add slide
Add 6 slide

--- a/src/slides/slide-1.pug
+++ b/src/slides/slide-1.pug
@@ -1,5 +1,22 @@
 section(data-background-image="images/developer-tired.jpg")
-  h2 Team collaboration
-  include sub-slides/subSlide-1-for-s1.pug
-  include sub-slides/subSlide-2-for-s1.pug
-  include sub-slides/subSlide-3-for-s1.pug
+  h3 About our team
+  <div class='section-column'>
+    <div class='section-column' style='align-items: center'>
+      image(class='logo-team' src='images/olga.jpg')
+      h4 Olga
+    </div>
+    <div class='section-row'>
+      <div class='section-column'>
+        image(class='logo-team' src='images/nina.jpeg')
+        h4 Nina
+      </div>
+      <div class='section-column'>
+        image(class='logo-team' src='images/anton.jpg')
+        h4 Anton
+      </div>
+      <div class='section-column'>
+        image(class='logo-team' src='images/andrei.jpg')
+        h4 Andrei
+      </div>
+    </div>
+  </div>
