--- a/src/slides/sub-slides/subSlide-2-for-s4.pug
+++ b/src/slides/sub-slides/subSlide-2-for-s4.pug
@@ -1,3 +1,2 @@
 span.fragment.fade-in
-  h4 Event takes new ID(UUID) & save in data base.
-  span &#9660;
+  h3(style='text-align: center') &#10050; Codereview
