--- a/src/slides/sub-slides/subSlide-3-for-s4.pug
+++ b/src/slides/sub-slides/subSlide-3-for-s4.pug
@@ -1,3 +1,2 @@
 span.fragment.fade-in
-  h4 Return updated calendar with new event
-  span &#9660;
+  h3(style='text-align: center') &#10050; Meeting
