--- a/src/slides/slide-3.pug
+++ b/src/slides/slide-3.pug
@@ -6,4 +6,7 @@ section(data-background-image="images/developer-tired.jpg")
   section(class='section-install')
     h4 We create and solve tasks
     image(class='jira-image' src='images/jira-tasks.jpg')
+  section(class='section-install')
+    h4 We use sprints in our project
+    image(class='jira-image' src='images/jira-sprints.jpg')
 </section>
