--- a/src/slides/slide-4.pug
+++ b/src/slides/slide-4.pug
@@ -1,6 +1,5 @@
 section(data-background-image="images/developer-tired.jpg")
-  h3 Work with events in calendar
+  h2 Team collaboration
   include sub-slides/subSlide-1-for-s4.pug
   include sub-slides/subSlide-2-for-s4.pug
   include sub-slides/subSlide-3-for-s4.pug
-  include sub-slides/subSlide-4-for-s4.pug
