--- a/src/slides/slide-5.pug
+++ b/src/slides/slide-5.pug
@@ -1,8 +1,16 @@
 section(data-background-image="images/developer-tired.jpg")
-  h2 About our team
-  <div class='big-block'>
+  section(class='section-example' style='text-align: center')
+    h3 Work with events in calendar
     include sub-slides/subSlide-1-for-s5.pug
     include sub-slides/subSlide-2-for-s5.pug
     include sub-slides/subSlide-3-for-s5.pug
-section(data-background-image="images/developer-tired.jpg")
-  h1 Thank you!
+    include sub-slides/subSlide-4-for-s5.pug
+  section(class='section-install')
+    h2 Team growth
+    <div class='big-block'>
+      include sub-slides/subSlide-1-for-s6.pug
+      include sub-slides/subSlide-2-for-s6.pug
+      include sub-slides/subSlide-3-for-s6.pug
+  section(data-background-image="images/developer-tired.jpg")
+    h1 Thank you!
+</section>
