refactor: update informatiom
Update Anton's photo & slide-3 layout

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -43,8 +43,11 @@
 .table-block {
   display: flex;
   flex-direction: row;
-  width: 90vw;
   justify-content: space-around;
+}
+
+.empty-block {
+  width: 20px;
 }
 
 .block-row {
