--- a/src/slides/slide-2.pug
+++ b/src/slides/slide-2.pug
@@ -102,7 +102,9 @@ section(data-background-image="images/developer-tired.jpg")
           <td>A/C</td>
         </tr>
       </table>
-      h6 <table style="padding-left: 20px">
+      </h6>
+      <div class='empty-block'></div>
+      h6 <table>
         <tr>
           <td>R</td>
           <td>responsible</td>
