--- a/src/slides/slide-3.pug
+++ b/src/slides/slide-3.pug
@@ -4,9 +4,9 @@ section(data-background-image="images/developer-tired.jpg")
     h4 To develop the application, we used Jira
     image(class='jira-image' src='images/jira.jpg')
   section(class='section-install')
-    h4 We create and solve tasks
+    h4 We created and solved tasks
     image(class='jira-image' src='images/jira-tasks.jpg')
   section(class='section-install')
-    h4 We use sprints in our project
+    h4 We used sprints in our project
     image(class='jira-image' src='images/jira-sprints.jpg')
 </section>
